tests/ui/incomplete_bitfield.stderr
error[E0080]: evaluation panicked: bitfield does not account for every bit in its storage
  --> tests/ui/incomplete_bitfield.rs:3:1
   |
 3 | / bitstruct! {
 4 | |     #[repr(C)]
 5 | |     struct Bad {
 6 | |         bits flags: u8 {
...  |
10 | | }
   | |_^ evaluation of `_` failed here
